--- a/index.html
+++ b/index.html
@@ -6,25 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Practical 3</title>
   </head>
-  <body>
-    <h3 style="color: red">
-      Practical-3: Live your First Web-Page on Git-Hub.
-    </h3>
-    <h1>Welcome to Fullstack Course</h1>
-    <h2>About Course</h2>
-    <p style="text-align: justify">
-      Front-end web development is everything involved in programming the user
-      interface of a web application. Typically it refers to the Hypertext
-      Markup Language (HTML), Cascading Style Sheets (CSS) and JavaScript
-      portion of web site production as opposed to the database or server-side
-      programming. It encompasses everything from building a simple page of HTML
-      text to creating complex, responsive HTML5 websites designed to be
-      accessed via various different browsers, devices and screen sizes.
-    </p>
-    <h2>Output</h2>
-    <div style="display:flex ; justify-content: center; align-items: center;flex-direction: column;">
-      <h3 style="text-align: center">Live Page on Github</h3>
-      <img src="./Assests/Practical-3.png" alt="" width="900"/>
-    </div>
+  <body style="background-color: rgb(219, 197, 172);" >
+    <h1>Welcome to Live Practical Book</h1>
+    <p>This is Live Practical Book for the Subject Fullstack Web Development-1. In this book we are performing all the practicals related to Front-end web development including topics from HTML, CSS, JS and Bootstrap. This book is hosted on Github cloud platform. You can view all the practicals from this Book.</p>
+    <h1 style="color: green;">List of Practicals</h1>
+   <p>1. Create a Web page including HTML basic skeleton using Offline HTML Editor and Online Sandbox Environment <a href="">Practical 1</a></p>
+   <p>2. Create a web page showing a basic html structure using character Entities and span Tag. <a href="">Practical 2</a></p>
+   <p>3. Live your First Web-Page on Git-Hub. <a href="">Practical 3</a></p>
+   <p>4. Create a website having list of all practical and their individual practical Page links <a href="">Practical 4</a></p>
   </body>
 </html>
