--- a/Practicals/practical3.html
+++ b/Practicals/practical3.html
@@ -24,7 +24,7 @@
     <h2>Output</h2>
     <div style="display:flex ; justify-content: center; align-items: center;flex-direction: column;">
       <h3 style="text-align: center">Live Page on Github</h3>
-      <img src="./Assests/Practical-3.png" alt="" width="900"/>
+      <img src="../Assests/Practical-3.png" alt="" width="900"/>
     </div>
   </body>
 </html>
