--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Practical 3</title>
   </head>
-  <body style="background-color: rgb(219, 197, 172);" >
+  <body style="background-color: rgb(235, 225, 213);" >
     <h1>Welcome to Live Practical Book</h1>
     <p>This is Live Practical Book for the Subject Fullstack Web Development-1. In this book we are performing all the practicals related to Front-end web development including topics from HTML, CSS, JS and Bootstrap. This book is hosted on Github cloud platform. You can view all the practicals from this Book.</p>
     <h1 style="color: green;">List of Practicals</h1>
-   <p>1. Create a Web page including HTML basic skeleton using Offline HTML Editor and Online Sandbox Environment <a href="">Practical 1</a></p>
-   <p>2. Create a web page showing a basic html structure using character Entities and span Tag. <a href="">Practical 2</a></p>
-   <p>3. Live your First Web-Page on Git-Hub. <a href="">Practical 3</a></p>
-   <p>4. Create a website having list of all practical and their individual practical Page links <a href="">Practical 4</a></p>
+   <p>1. Create a Web page including HTML basic skeleton using Offline HTML Editor and Online Sandbox Environment <a href="./Practicals/practical1.html">Practical 1</a></p>
+   <p>2. Create a web page showing a basic html structure using character Entities and span Tag. <a href="./Practicals/practical2.html">Practical 2</a></p>
+   <p>3. Live your First Web-Page on Git-Hub. <a href="./Practicals/practical3.html">Practical 3</a></p>
+    <p>4. Create a website having list of all practical and their individual practical Page links <a href="./index.html">Practical-4</a></p>
   </body>
 </html>
