--- a/Practicals/practical1.html
+++ b/Practicals/practical1.html
@@ -7,6 +7,10 @@
     <title>Assignment 1</title>
   </head>
   <body>
+    <h2 style="color: red">
+      Practical 1: Create a Web page including HTML basic skeleton using Offline
+      HTML Editor and Online Sandbox Environment
+    </h2>
     <h1>Welcome to Full Stack Course</h1>
     <h2>About Course</h2>
     <p>
