--- a/index.html
+++ b/index.html
@@ -34,5 +34,8 @@
       4. Create a website having list of all practical and their individual
       practical Page links <a href="./index.html">Practical-4</a>
     </p>
+    <p>
+      5. Create a Web-Page showing the use of Image-Map in the Web Application <a href="./Practicals/practical5.html">Practical-5</a>
+    </p>
   </body>
 </html>
