--- a/index.html
+++ b/index.html
@@ -37,5 +37,8 @@
     <p>
       5. Create a Web-Page showing the use of Image-Map in the Web Application <a href="./Practicals/practical5.html">Practical-5</a>
     </p>
+    <p>
+      6. 	Create a Card Layout using CSS layout properties <a href="./Practicals/practical6.html">Practical-6</a>
+    </p>
   </body>
 </html>
