--- a/index.html
+++ b/index.html
@@ -40,5 +40,8 @@
     <p>
       6. 	Create a Card Layout using CSS layout properties <a href="./Practicals/practical6.html">Practical-6</a>
     </p>
+    <p>
+      7. Web Page Layout <a href="./Practicals/practical7.html">Practical-7</a>
+    </p>
   </body>
 </html>
