--- a/index.html
+++ b/index.html
@@ -43,5 +43,8 @@
     <p>
       7. Web Page Layout <a href="./Practicals/practical7.html">Practical-7</a>
     </p>
+    <p>
+      8. Create a Web Page having Fixed Navigation Bar with content <a href="./Practicals/practical8.html">Practical-8</a>
+    </p>
   </body>
 </html>
