--- a/Practicals/practical9.html
+++ b/Practicals/practical9.html
@@ -5,11 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/practical9.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
     <title>Practical-9</title>
 </head>
 <body>
     <div class="container">
         <div class="header">
+            <label for="" class="icon">
+                <input type="checkbox" name="" id="">
+                <i class="fa-solid fa-list"></i>
+                
+            </label>
           <ul>
               <li><a href="#">Home</a></li>
               <li><a href="#about">About</a></li>
@@ -17,6 +23,9 @@
               <li><a href="#technology">Technologies</a></li>
               <li><a href="#contact">Contact</a></li>
           </ul>
+          <label for="" class="icon1">
+            <i class="fa-solid fa-xmark"></i>
+          </label>
         </div>
         <div class="banner">
           <h1>PRACTICAL - 8</h1>
