--- a/index.html
+++ b/index.html
@@ -46,5 +46,8 @@
     <p>
       8. Create a Web Page having Fixed Navigation Bar with content <a href="./Practicals/practical8.html">Practical-8</a>
     </p>
+    <p>
+      9. Create a Responsive Web Page having Fixed Navigation Bar with content  <a href="./Practicals/practical9.html">Practical-8</a>
+    </p>
   </body>
 </html>
