--- a/Practicals/practical9.html
+++ b/Practicals/practical9.html
@@ -5,27 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/practical9.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Practical-9</title>
 </head>
 <body>
     <div class="container">
         <div class="header">
-            <label for="" class="icon">
-                <input type="checkbox" name="" id="">
-                <i class="fa-solid fa-list"></i>
-                
+            <input type="checkbox" name="" id="chk">
+            <label for="chk" class="icon">
+                <i class="fa fa-bars"></i>
             </label>
-          <ul>
+          <ul class="menu">
               <li><a href="#">Home</a></li>
               <li><a href="#about">About</a></li>
               <li><a href="#team">Team</a></li>
               <li><a href="#technology">Technologies</a></li>
               <li><a href="#contact">Contact</a></li>
+              <label for="chk" class="icon1">
+                <i class="fa fa-times"></i>
+            </label>
           </ul>
-          <label for="" class="icon1">
-            <i class="fa-solid fa-xmark"></i>
-          </label>
         </div>
         <div class="banner">
           <h1>PRACTICAL - 9</h1>
