--- a/index.html
+++ b/index.html
@@ -49,5 +49,8 @@
     <p>
       9. Create a Responsive Web Page having Fixed Navigation Bar with content  <a href="./Practicals/practical9.html">Practical-9</a>
     </p>
+    <p>
+      10. Create a Responsive Web Page having side Navigation Bar with content  <a href="./Practicals/practical10.html">Practical-10</a>
+    </p>
   </body>
 </html>
