--- a/index.html
+++ b/index.html
@@ -35,22 +35,37 @@
       practical Page links <a href="./index.html">Practical-4</a>
     </p>
     <p>
-      5. Create a Web-Page showing the use of Image-Map in the Web Application <a href="./Practicals/practical5.html">Practical-5</a>
+      5. Create a Web-Page showing the use of Image-Map in the Web Application
+      <a href="./Practicals/practical5.html">Practical-5</a>
     </p>
     <p>
-      6. 	Create a Card Layout using CSS layout properties <a href="./Practicals/practical6.html">Practical-6</a>
+      6. Create a Card Layout using CSS layout properties
+      <a href="./Practicals/practical6.html">Practical-6</a>
     </p>
     <p>
       7. Web Page Layout <a href="./Practicals/practical7.html">Practical-7</a>
     </p>
     <p>
-      8. Create a Web Page having Fixed Navigation Bar with content <a href="./Practicals/practical8.html">Practical-8</a>
+      8. Create a Web Page having Fixed Navigation Bar with content
+      <a href="./Practicals/practical8.html">Practical-8</a>
     </p>
     <p>
-      9. Create a Responsive Web Page having Fixed Navigation Bar with content  <a href="./Practicals/practical9.html">Practical-9</a>
+      9. Create a Responsive Web Page having Fixed Navigation Bar with content
+      <a href="./Practicals/practical9.html">Practical-9</a>
     </p>
     <p>
-      10. Create a Responsive Web Page having side Navigation Bar with content  <a href="./Practicals/practical10.html">Practical-10</a>
+      10. Create a Responsive Web Page having side Navigation Bar with content
+      <a href="./Practicals/practical10.html">Practical-10</a>
+    </p>
+    <p>
+      11. Create a Responsive Footer
+      <a href="./Practicals/practical10.html">Practical-11</a>
+    </p>
+    <p>
+      12. Create a table that represents a live practical book.<a
+        href="./Practicals/practical12.html"
+        >Practical-12</a
+      >
     </p>
   </body>
 </html>
