--- a/index.html
+++ b/index.html
@@ -67,5 +67,11 @@
         >Practical-12</a
       >
     </p>
+    <p>
+      13. Create a table that select your plan.<a
+        href="./Practicals/practical13.html"
+        >Practical-12</a
+      >
+    </p>
   </body>
 </html>
