--- a/index.html
+++ b/index.html
@@ -70,7 +70,13 @@
     <p>
       13. Create a table that select your plan.<a
         href="./Practicals/practical13.html"
-        >Practical-12</a
+        >Practical-13</a
+      >
+    </p>
+    <p>
+      14. Create a counter using JavaScript.<a
+        href="./Practicals/practical14.html"
+        >Practical-14</a
       >
     </p>
   </body>
