--- a/index.html
+++ b/index.html
@@ -79,5 +79,11 @@
         >Practical-14</a
       >
     </p>
+    <p>
+      14. Create a Create Account page<a
+        href="./Practicals/practical15.html"
+        >Practical-14</a
+      >
+    </p>
   </body>
 </html>
